--- a/src/AssemblyInformationEndpoint.Net/AssemblyInformationEndpoint.Net.csproj
+++ b/src/AssemblyInformationEndpoint.Net/AssemblyInformationEndpoint.Net.csproj
@@ -2,10 +2,28 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>disable</Nullable>
+    <WarningsAsErrors>true</WarningsAsErrors>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
+    <Title>AssemblyInformationEndpoint.Net</Title>
+    <Description>Provide an endpoint that returns information about the executing assembly in JSON for .NET Core 3.1+ and .NET 6+.</Description>
+    <Authors>Thomas Harold</Authors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>AssemblyInformation endpoint</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+
+    <PackageId>AssemblyInformationEndpoint.Net</PackageId>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/tgharold/AssemblyInformationEndpoint</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AssemblyInformationEndpoint\AssemblyInformationEndpoint.csproj" />
+    <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
