--- a/src/AssemblyInformationEndpoint.Net/AssemblyInformationEndpoint.Net.csproj
+++ b/src/AssemblyInformationEndpoint.Net/AssemblyInformationEndpoint.Net.csproj
@@ -26,4 +26,8 @@
     <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AssemblyInformationEndpoint\AssemblyInformationEndpoint.csproj" />
+  </ItemGroup>
+
 </Project>
