Update Newtonsoft.Json, Swashbuckle

--- a/examples/FrameworkMVCExample/FrameworkMVCExample.csproj
+++ b/examples/FrameworkMVCExample/FrameworkMVCExample.csproj
@@ -47,6 +47,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -99,9 +102,6 @@
     <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\..\packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
@@ -254,6 +254,10 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\AssemblyInformationEndpoint.Framework\AssemblyInformationEndpoint.Framework.csproj">
+      <Project>{0bd5b430-bc4c-423f-87dc-69d6a3c8b470}</Project>
+      <Name>AssemblyInformationEndpoint.Framework</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\AssemblyInformationEndpoint\AssemblyInformationEndpoint.csproj">
       <Project>{93eedbe0-1fe5-4510-b707-5b5b9063611d}</Project>
       <Name>AssemblyInformationEndpoint</Name>
